# ironclaw

./: .gitignore  Dockerfile.worker  PR31_PRODUCTION_READINESS_ANALYSIS.md  PR_STRATEGY.md  SANDBOX_DEBUG_HANDOVER.md  SECURITY_ASSESSMENT.md  TEMP_FILE  TEMP_FILE2
.opencode/: opencode.json
.opencode/docs/: DONE_TOOL_NOTICE.md
.tmp/: start-ironclaw.sh  test_http_port_fix.sh
architecture/errors/: llm-model-mismatch.md
channels-src/telegram/: BUILD_NOTES.md
docs/: AGENT_BEHAVIOR_CHANGES.md  DOCUMENTATION_FIXES.md  SECURE_SETUP_GUIDE.md  SETUP_CHECKLIST.md
integrations/errors/: bot-no-response.md  tunnel-errors.md
scripts/: fix-telegram-tunnel-newline.sh  fix-telegram-tunnel.sh  fix-telegram-webhook.sh  setup-telegram-secret.sh  start-ironclaw-ephemeral.sh  start-ironclaw-polling-fixed.sh  start-ironclaw-webhook.sh  test-ephemeral-tunnel.sh
skills/telegram-debug/: IMPLEMENTATION_SUMMARY.md  README.md  SKILL.md  telegram-debug.capabilities.json  test.sh  verify.sh
src/: config.rs  error.rs  main.rs  settings.rs
src/agent/: routine_engine.rs
src/llm/: mod.rs  nearai.rs  nearai_chat.rs  openai_compatible.rs  provider.rs  rig_adapter.rs
src/pairing/: store.rs
src/setup/: wizard.rs
src/tools/: registry.rs
src/worker/: api.rs  container.rs  job.rs
src/workspace/: embeddings.rs  mod.rs
telecom/guides/: telegram-mode-selection.md
tests/: dispatched_routine_run_tests.rs  tool_schema_validation.rs
tools-src/tunnel-monitor/: Cargo.toml  README.md  tunnel-monitor.capabilities.json
tools-src/tunnel-monitor/src/: lib.rs
wit/: config-validator.wit
(+84 files in other folders)
