[package]
name = "tunnel-monitor"
version = "1.0.0"
edition = "2021"
description = "Monitor and auto-recover Cloudflare tunnels for IronClaw"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.41.0"
regex = "1.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
